Josip corrections for LANL quote

--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -201,9 +201,9 @@ exceptions. LLNL is ``responding to requests for additional data on an hourly,
 weekly and monthly basis."  They are also working to develop an automated capability to share 
 data with their electricity providers, which would provide automated additional 
 detailed forecasting and ultimately real time data."
-LANL has also been requested to provide ``power projections, hour by hour,
-for at least a day in advance'' and, perhaps as a consequence, would like to
-have more information on ``sensitivity of power distribution grid to rapid
+LANL has also been requested to provide average ``power projections, hour by hour,
+for at least a day in advance.'' Additionally, LANL has asked their electricity provider for
+more information on ``sensitivity of power distribution grid to rapid
 transients (random daily step changes of 10 MW up or down within a single AC
 cycle).''
 
