--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -12,61 +12,24 @@
 \conferenceinfo{SC14}{'14 New Orleans, Louisiana USA}
 \CopyrightYear{2014}
 
-%
-%
-%
 \title{
 The Electrical Grid and Supercomputer Centers:\\
 An Investigative Analysis of Emerging Opportunities and Challenges
 }
 
-%
-%
-\numberofauthors{12}
-\author{
-\alignauthor Fname Lname\\
-   \affaddr{Institute Name}\\
-   \affaddr{City State Zip} \\
-   \affaddr{Country} \\
-   \email{Name@email.adr}
-\alignauthor Fname Lname\\
-   \affaddr{Institute Name}\\
-   \affaddr{City State Zip} \\
-   \affaddr{Country} \\
-   \email{Name@email.adr}
-\alignauthor Fname Lname\\
-   \affaddr{Institute Name}\\
-   \affaddr{City State Zip} \\
-   \affaddr{Country} \\
-   \email{Name@email.adr}
-\and
-\alignauthor Fname Lname\\
-   \affaddr{Institute Name}\\
-   \affaddr{City State Zip} \\
-   \affaddr{Country} \\
-   \email{Name@email.adr}
-\alignauthor Fname Lname\\
-   \affaddr{Institute Name}\\
-   \affaddr{City State Zip} \\
-   \affaddr{Country} \\
-   \email{Name@email.adr}
-\alignauthor Fname Lname\\
-   \affaddr{Institute Name}\\
-   \affaddr{City State Zip} \\
-   \affaddr{Country} \\
-   \email{Name@email.adr}
-}
+\author{Natalie Bates$^1$, Girish Ghatikar$^2$,
+  Ghaleb Abdulla$^3$, Greg Koenig$^4$, Sridutt Bhalachandra$^5$, \\
+	Mehdi Sheikhalishashi $^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
+	\\ \\
+	$^1$Energy Efficient HPC Working Group\\
+       $^2$Lawrence Berkeley National Laboratory\\
+       $^3$Lawrence Livermore National Laboratory\\
+			 $^4$Oak Ridge National Laboratory\\
+			 $^5$University of North Carolina\\
+			$^6$University of Calabria\\
+			$^7$University of Arizona
+	}
 
-\additionalauthors {
-   \label{sec:additional}
-\noindent
-Fname Lname, Affiliation\\
-Fname Lname, Affiliation\\
-Fname Lname, Affiliation\\
-Fname Lname, Affiliation\\
-Fname Lname, Affiliation\\
-Fname Lname, Affiliation
-}
 \maketitle              % typeset the title of the contribution
 
 \input{abstract}
