--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -18,7 +18,7 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 }
 
 \author{Natalie Bates$^1$, Girish Ghatikar$^2$,
-  Ghaleb Abdulla$^3$, Greg Koenig$^4$, Sridutt Bhalachandra$^5$, \\
+  Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
 	Mehdi Sheikhalishashi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
 	\\ \\
 	$^1$Energy Efficient HPC Working Group\\
