Intro: Fixed language, typos, refs. Need results.

--- a/bib/patki.bib
+++ b/bib/patki.bib
@@ -5072,3 +5072,8 @@ YEAR = 2012
         year = "2013",
         url = "http://www.computerworld.com/s/article/9238364/New_data_center_survey_shows_mediocre_results_for_energy_efficiency?pageNumber=1",
 }
+
+@ARTICLE{LBNL,
+	title={{LBNL Data Center Grid Integration Activities}},
+	url={{ http://drrc.lbl.gov/projects/dc}}
+	}
