--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -70,7 +70,7 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 %
 % ---- Bibliography ----
 %
-\bibliographystyle{abbrv}
+\bibliographystyle{IEEETran}
 \bibliography{../bib/whitepaper,../bib/patki}  % eehpcmethod.bib is the name of the Bibliography in this case
 %
 
