--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -13,7 +13,7 @@
 \CopyrightYear{2014}
 
 \title{
-The Electrical Grid and Supercomputer Centers:\\
+The Electrical Grid and Supercomputing Centers:\\
 An Investigative Analysis of Emerging Opportunities and Challenges
 }
 
